Templated CI config update

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,10 @@
 include:
   - project: 'alchemy/infrastructure/gitlab-ci-config'
-    file: '3p-library-build.yml'
+    file: '3p-library.yml'
 
 variables:
-  AUTOBUILD_PACKAGE_DIR: dullahan
-  AUTOBUILD_PACKAGE_NAME: dullahan
-  NO_LNX: 1
+  BUILD_COMMON: 0
+  BUILD_WINDOWS: 0
+  BUILD_WINDOWS64: 1
+  BUILD_LINUX64: 0
+  BUILD_MACOS: 0
