--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 include:
   - project: 'alchemy/infrastructure/gitlab-ci-config'
-    file: '3p-library-genericversion.yml'
+    file: '3p-library-m1.yml'
 
 variables:
   BUILD_COMMON: 0
