--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,10 @@
 include:
   - project: 'alchemy/infrastructure/gitlab-ci-config'
-    file: '3p-library-genericversion.yml'
+    file: '3p-library-m1.yml'
 
 variables:
   BUILD_COMMON: 0
   BUILD_WINDOWS: 0
   BUILD_WINDOWS64: 1
   BUILD_LINUX64: 1
-  BUILD_MACOS: 1
+  BUILD_MACOS: 0
