--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,22 +8,20 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [windows-2022, macos-13, ubuntu-22.04]
+        os: [windows-2022, macos-15, ubuntu-22.04]
         addrsize: ["64"]
     runs-on: ${{ matrix.os }}
     steps:
-      - name: Install Linux dependencies
-        if: runner.os == 'linux'
-        run: sudo apt update && sudo apt install -y  ninja-build
-
-      - uses: secondlife/action-autobuild@v5
+      - uses: AlchemyViewer/action-autobuild@v5
         with:
           addrsize: ${{ matrix.addrsize }}
+          apt-packages: ninja-build
+          brew-packages: ninja
   release:
     needs: build
     runs-on: [ubuntu-latest]
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
-      - uses: secondlife/action-autobuild-release@v3
+      - uses: AlchemyViewer/action-autobuild-release@v4
         with:
           public: true
